infrastracture/application/cicd/jira/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
  namespace: ci
spec:
  ports:
  - name: http
    port: 11080
    targetPort: 8080
  selector:
    app: jira
  type: ClusterIP
