infrastracture/application/cicd/jira/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jira
  namespace: ci
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jira.suerlink.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jira
          servicePort: 11080
